* Direct invocation of Parser::__construct() (instead of via a ParserFactory)
  now throws an exception; support has also been removed for several
  deprecated variants on the arguments passed to Parser::__construct.
  Direct invocation of Parser::__construct was deprecated in 1.34.
* Parser::setFunctionTagHook(), deprecated in 1.35, has been removed.
* The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
* The ParserBeforeTidy, ParserBeforeStrip, and ParserAfterStrip hooks,
  deprecated in 1.35, have been removed.
* All methods of MWTidy except for MW::tidy() have been removed. These were each
  either marked as @internal or deprecated in 1.35.
* (T248062) Mixins `.background-image-svg()` and `.background-image-svg-quick()`
  (provided by mediawiki.mixins.less), which have been deprecated since 1.35,
  have now been removed. MediaWiki no longer supports any browser which would
  require this SVG-fallback PNG support, so you can simply use the regular CSS
  `background-image:` declaration instead.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery(), deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* Skin::makeI18nUrl(), deprecated in 1.35, has been removed.
* The following User methods, deprecated and moved to BlockManager in 1.34, were
  removed:
  - ::isDnsBlacklisted
  - ::inDnsBlacklist
  - ::isLocallyBlockedProxy
  - ::trackBlockWithCookie
* Support for v1 of the parser tests file format has been removed; it was
  deprecated in 1.35. (T174199)
* SpecialUnblockUser::processUIUnblock() now returns a Status object instead of
  an array of messages or a boolean value. This function was also marked as