@@ -284,6 +284,9 @@ because of Phabricator reports.
   deprecated variants on the arguments passed to Parser::__construct.
   Direct invocation of Parser::__construct was deprecated in 1.34.
 * Parser::setFunctionTagHook(), deprecated in 1.35, has been removed.
+* The following properties of Parser, deprecated in 1.35, have been made
+  private:
+  - $mTagHooks - use Parser::getTags()
 * The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
 * The ParserBeforeTidy, ParserBeforeStrip, and ParserAfterStrip hooks,
   deprecated in 1.35, have been removed.
